--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -2,8 +2,8 @@
 <sync-adapter
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:contentAuthority="com.example.android.datasync.provider"
-    android:accountType="com.android.example.datasync"
-    android:userVisible="false"
-    android:supportsUploading="false"
-    android:allowParallelSyncs="false"
+    android:accountType="example.com"
+    android:userVisible="true"
+    android:supportsUploading="true"
+    android:allowParallelSyncs="true"
     android:isAlwaysSyncable="true"/>
