--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,4 +13,10 @@
     tools:context="com.example.jaroslavistok.personalmobileassistantformanagingdiabetes.MainActivity"
     tools:showIn="@layout/activity_main">
 
+
+    <ListView
+        android:id="@+id/entriesListView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
 </RelativeLayout>
