--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,10 +13,12 @@
     tools:context="com.example.jaroslavistok.personalmobileassistantformanagingdiabetes.MainActivity"
     tools:showIn="@layout/activity_main">
 
-
     <ListView
         android:id="@+id/entriesListView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
