--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,6 @@
     </android.support.design.widget.AppBarLayout>
 
 
-
-    <include layout="@layout/content_main" />
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -34,6 +31,8 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
+    <include layout="@layout/content_main"
+        android:layout_height="208dp" />
 
 
 </android.support.design.widget.CoordinatorLayout>
