--- a/app/src/main/res/layout/activity_add_log_entry.xml
+++ b/app/src/main/res/layout/activity_add_log_entry.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.jaroslavistok.personalmobileassistantformanagingdiabetes.MainActivity">
+    tools:context="com.example.jaroslavistok.personalmobileassistantformanagingdiabetes.AddLogEntry">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -17,11 +17,9 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
+            app:popupTheme="@style/AppTheme.PopupOverlay" ></android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
-
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -29,10 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@android:drawable/ic_input_add" />
 
-    <include layout="@layout/content_main"
-        android:layout_height="208dp" />
-
+    <include layout="@layout/content_add_log_entry" />
 
 </android.support.design.widget.CoordinatorLayout>
