--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,10 +1,10 @@
 <resources>
 
     <!--<style name="AppTheme.NoActionBar">-->
-    <!--<item name="windowActionBar">false</item>-->
-    <!--<item name="windowNoTitle">true</item>-->
-    <!--<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
-    <!--<item name="android:statusBarColor">@android:color/transparent</item>-->
+    <!--<record name="windowActionBar">false</record>-->
+    <!--<record name="windowNoTitle">true</record>-->
+    <!--<record name="android:windowDrawsSystemBarBackgrounds">true</record>-->
+    <!--<record name="android:statusBarColor">@android:color/transparent</record>-->
     <!--</style>-->
 
 
