--- a/app/src/main/res/layout/record_row.xml
+++ b/app/src/main/res/layout/record_row.xml
@@ -2,8 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    >
+    android:paddingRight="16dp">
 
     <TextView
         android:id="@+id/datetime"
