Odstranenie nepotrebnych tried a upratanie projektu

--- a/app/src/main/res/layout/reminder_row.xml
+++ b/app/src/main/res/layout/reminder_row.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -44,4 +44,15 @@
         android:layout_marginStart="49dp"
         android:layout_toEndOf="@+id/reminder_category"
         android:layout_toRightOf="@+id/reminder_category" />
+
+    <Button
+        android:id="@+id/test_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/reminder_category"
+        android:layout_marginLeft="23dp"
+        android:layout_marginStart="23dp"
+        android:layout_toEndOf="@+id/reminder_toggle"
+        android:layout_toRightOf="@+id/reminder_toggle"
+        android:text="button" />
 </RelativeLayout>
