--- a/app/src/main/res/layout/content_alarm.xml
+++ b/app/src/main/res/layout/content_alarm.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.jaroslavistok.personalmobileassistantformanagingdiabetes.alarm_example.AlarmActivity"
+    tools:context="com.example.jaroslavistok.personalmobileassistantformanagingdiabetes.activities.AlarmActivity"
     tools:showIn="@layout/activity_alarm">
 
 </RelativeLayout>
