--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -15,7 +15,8 @@
         android:id="@+id/showDataButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/database_button_image"
+        android:src="@drawable/logbook_icon"
+        android:background="@color/colorWhite"
         android:contentDescription="Show data button"
         android:layout_alignTop="@+id/showDatabaseButton"
         android:layout_alignParentRight="true"
@@ -25,7 +26,8 @@
         android:id="@+id/showDatabaseButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/show_data_button_image"
+        android:src="@drawable/information_icon"
+        android:background="@color/colorWhite"
         android:contentDescription="Show databse button"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
@@ -35,7 +37,8 @@
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/add_button_image"
+        android:src="@drawable/add_icon"
+        android:background="@color/colorWhite"
         android:contentDescription="Add button"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -45,7 +48,8 @@
         android:id="@+id/statisticsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/stats_button_image"
+        android:src="@drawable/graph_icon"
+        android:background="@color/colorWhite"
         android:contentDescription="Show statistics"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
