--- a/app/src/main/res/layout/content_add_log_entry.xml
+++ b/app/src/main/res/layout/content_add_log_entry.xml
@@ -62,16 +62,16 @@
         android:layout_alignStart="@+id/time_text_field" />
 
     <EditText
+        android:id="@+id/fast_insuline_text_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:layout_below="@+id/glucose_text_field"
-        android:layout_alignRight="@+id/glucose_text_field"
         android:layout_alignEnd="@+id/glucose_text_field"
-        android:layout_marginTop="40dp"
-        android:id="@+id/fast_insuline_text_field"
-        android:hint="Rýchly inzulín" />
+        android:layout_alignRight="@+id/glucose_text_field"
+        android:layout_below="@+id/glucose_text_field"
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:hint="Rýchly inzulín"
+        android:inputType="number" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -100,6 +100,6 @@
     <Spinner
         android:id="@+id/categories_spinner"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </Spinner>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"></Spinner>
 </RelativeLayout>
