Drobne upravy v sablonach

--- a/app/src/main/res/layout/record_row.xml
+++ b/app/src/main/res/layout/record_row.xml
@@ -8,8 +8,9 @@
         android:id="@+id/datetime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text=""
-        android:layout_marginTop="10dp" />
+        android:textSize="24sp" />
 
 
     <TextView
@@ -17,66 +18,50 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/datetime"
+        android:layout_marginTop="10dp"
         android:text="Hodnota glykémie: "
-        android:layout_marginTop="10dp" />
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/fast_insuline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/glucose"
+        android:layout_marginTop="10dp"
         android:text="Rýchly inzulín: "
-        android:layout_marginTop="10dp" />
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/slow_insuline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/fast_insuline"
+        android:layout_marginTop="10dp"
         android:text="Pomalý inzulín: "
-        android:layout_marginTop="10dp" />
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/note"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/slow_insuline"
-        android:text="Poznámka: "
+        android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" />
+        android:text="Poznámka: "
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="category"
-        android:layout_marginRight="51dp"
-        android:layout_marginEnd="51dp"
         android:layout_alignBaseline="@+id/datetime"
         android:layout_alignBottom="@+id/datetime"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-         />
-
-    <Button
-        android:text="Odstrániť"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/glucose"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="29dp"
-        android:layout_marginEnd="29dp"
-        android:id="@+id/delete_record" />
-
-    <Button
-        android:text="Upraviť"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/slow_insuline"
-        android:layout_alignRight="@+id/delete_record"
-        android:layout_alignEnd="@+id/delete_record"
-        android:id="@+id/update_record" />
+        android:layout_marginEnd="51dp"
+        android:layout_marginRight="51dp"
+        android:text="Kategória: "
+        android:textSize="24sp" />
 
 
 </RelativeLayout>
