--- a/app/src/main/res/layout/reminder_row.xml
+++ b/app/src/main/res/layout/reminder_row.xml
@@ -13,7 +13,8 @@
         android:layout_marginLeft="19dp"
         android:layout_marginStart="19dp"
         android:layout_marginTop="14dp"
-        android:text="Nazov:" />
+        android:text="Nazov: "
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/reminder_category"
@@ -23,7 +24,8 @@
         android:layout_alignStart="@+id/reminder_name"
         android:layout_below="@+id/reminder_name"
         android:layout_marginTop="10dp"
-        android:text="Kategoria:" />
+        android:text="Kategoria: "
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/alarm_time"
@@ -33,7 +35,8 @@
         android:layout_alignStart="@+id/reminder_category"
         android:layout_below="@+id/reminder_category"
         android:layout_marginTop="12dp"
-        android:text="Time:" />
+        android:text="Time: "
+        android:textSize="24sp" />
 
     <Switch
         android:id="@+id/reminder_toggle"
@@ -45,14 +48,4 @@
         android:layout_toEndOf="@+id/reminder_category"
         android:layout_toRightOf="@+id/reminder_category" />
 
-    <Button
-        android:id="@+id/test_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/reminder_category"
-        android:layout_marginLeft="23dp"
-        android:layout_marginStart="23dp"
-        android:layout_toEndOf="@+id/reminder_toggle"
-        android:layout_toRightOf="@+id/reminder_toggle"
-        android:text="button" />
 </RelativeLayout>
