Pridane a uravene layouty

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -59,9 +59,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Logout"
+        android:textColor="@color/colorWhite"
         android:id="@+id/logout_button"
-        android:layout_below="@+id/showDatabaseButton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:background="@color/colorAccent"
+        android:layout_marginBottom="54dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/showDataButton"
+        android:layout_alignEnd="@+id/showDataButton" />
 
 </RelativeLayout>
