Dizajnove upravy, preklady a dokoncovanie

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -41,12 +41,12 @@
         android:text="@string/sign_up_button_label" />
 
     <Button
-        android:text="Login"
+        android:text="@string/back_to_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signupButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="17dp"
-        android:id="@+id/button2" />
+        android:id="@+id/backToLogin" />
 
 </RelativeLayout>
