--- a/app/src/main/res/layout/record_row.xml
+++ b/app/src/main/res/layout/record_row.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorDivider"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
 
@@ -19,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/datetime"
         android:layout_marginTop="10dp"
+
         android:textSize="24sp" />
 
     <TextView
@@ -52,8 +54,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/note"
         android:layout_alignParentRight="true"
+        android:layout_below="@+id/note"
+        android:layout_marginBottom="50dp"
         android:layout_marginEnd="51dp"
         android:layout_marginRight="51dp"
         android:textSize="24sp" />
