Finalne upravy a doladovacky aplikacie

--- a/app/src/main/res/layout/content_add_log_entry.xml
+++ b/app/src/main/res/layout/content_add_log_entry.xml
@@ -101,5 +101,5 @@
         android:id="@+id/categories_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"></Spinner>
+        android:layout_marginLeft="30dp" />
 </RelativeLayout>
