--- a/app/src/main/res/layout/filter_dialog.xml
+++ b/app/src/main/res/layout/filter_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="16dp"
-        android:hint="@string/reminder_name"
+        android:hint="Od"
         android:inputType="date" />
 
     <EditText
@@ -22,6 +22,6 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
-        android:hint="@string/reminder_category"
+        android:hint="Do"
         android:inputType="date" />
 </LinearLayout>
